--- a/gb/25/9/10/n14591201.md
+++ b/gb/25/9/10/n14591201.md
@@ -19,39 +19,33 @@
 <p>博励治将当前住房危机总结为三个困境：大多数加拿大人买不起房、房价过低导致房主不愿出售、建筑商无力承担建房成本。他强调，政府应减少干预、简化繁琐手续并提高效率，以促进住房市场复苏。</p>
 <p>责任编辑：岳怡</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587881.md#1">加拿大国际学生签证数量锐减 冲击高校与经济</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587919.md#1">加拿大7月出口增长 贸易逆差缩至49亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588125.md#1">加拿大住房销售量连续4个月回升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588771.md#1">加拿大与澳洲军舰共同穿越台湾海峡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589314.md#1">加拿大最大的玉米迷宫已经在安省小镇开放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589369.md#1">加拿大军人在拉脱维亚失踪 证实身亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590168.md#1">加拿大总理卡尼挑战26公里越野赛成功完赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621811.md#1">美车厂将把生产力撤回 加汽车业或进入寒冬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621806.md#1">加鼎银行：联邦赤字今年或高达745亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621797.md#1">智库：联邦财政问责 成绩仅为“D”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257250.md#1" target="_blank">【征文】凌晓辉：贞洁论（五）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615939.md#1">执子之手 与子偕老 一个真实的爱情故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615054.md#1">哈德逊河画派：艺术与人生的知音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619422.md#1">【未解之谜】天才科学家杨定一的灵性之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616439.md#1">【未解之谜】以哈和平只是开始？人类最后七年倒计时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/17/n3230969.md#1">隋朝名将韩擒虎——生为上柱国，死做阎罗王</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621008.md#1">【军事情报局】多布罗皮利亚之战 俄军被分割包围</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621052.md#1">【新闻大家谈】胡春华入主军委？习刀刃向内？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621648.md#1">【重播】副总统万斯先后会见以色列总理和总统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619781.md#1">中共四中全会开幕 专家：高层大改组遇难题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619316.md#1">于朦胧案冲击四中全会 退出中共大潮涌动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619516.md#1">中共四中全会前清洗军队 专家析背后因素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621083.md#1">方励疑卷于朦胧案 监制电影遭抵制 预售仅万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620317.md#1">汤唯睽违7年再拍剧 网传新剧与易烊千玺搭档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620277.md#1">刘嘉玲曝节目秘辛：梁朝伟让我少说话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621106.md#1">黄子韬婚礼地点极保密 刘宇宁赴宴迷路使一招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621050.md#1">成龙曾嘲讽李小龙被捧坏 旧片被翻出引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619895.md#1">盆栽植物的叶子变黄怎么救？专家教你方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620519.md#1">飞机商务舱和头等舱有何差异？值得搭乘吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620190.md#1">【美食天堂】虾馄饨汤～只需30分钟！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619709.md#1">7个容易被忽略的脑瘤征兆 看看你有没有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619580.md#1">3款简单的烤吐司料理 早餐轻松搞定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648981.md#1">【重播】卢比奥出席“健康合作框架”签署仪式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648988.md#1">【纪元焦点】德部署箭-3系统 欧洲重新武装起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14649058.md#1">【直播】川普和夫人参加国家圣诞树点灯仪式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647601.md#1">大陆猪价跌跌不休 养殖户：养啥都赔钱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647913.md#1">“脱贫”变返贫 中共玩文字游戏 百姓诉苦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647914.md#1">上海演出被突然中断后 日本歌手大槻真希首发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648331.md#1">6岁儿子调皮狂奔 刘诗诗放大招 网友笑翻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648303.md#1">迪丽热巴新戏片酬曝光 疑为角色减重久病不愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646964.md#1">梁朝伟被质疑定居日本 宣传电影时首度回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647603.md#1">滨崎步零观众演出后返日 唱片公司会长批中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647976.md#1">专家：你的伴侣无条件爱你的3个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648713.md#1">AI产出的影片以假乱真 如何辨识？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647816.md#1">为什么每天喝柳橙汁能增进心脏健康？</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/10/n14591201.htm">博励治：加拿大面临住房危机 批政府不作为</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591201.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
